apps/ai-gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-gateway
  namespace: ai-lab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ai-gateway
  template:
    metadata:
      labels:
        app: ai-gateway
    spec:
      containers:
      - name: ai-gateway
        image: ivangrz/ai-infra-gateway:1.1.12
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
        volumeMounts:
        - name: keys-volume
          mountPath: /app/configs/keys.json
          subPath: keys.json
      volumes:
      - name: keys-volume
        secret:
          secretName: ai-gateway-keys
---
apiVersion: v1
kind: Service
metadata:
  name: ai-gateway-service
  namespace: ai-lab
  labels:
    app: ai-gateway
spec:
  selector:
    app: ai-gateway
  ports:
    - name: http-metrics
      protocol: TCP
      port: 80
      targetPort: 8080
